testsuite/tests/linear/should_fail/LinearTHFail2.stderr

LinearTHFail2.hs:7:3: error:
    Non-linear fields in data constructors not (yet) handled by Template Haskell
